added cdn and css

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -17,6 +17,10 @@
   font-size: large;
 }
 
+.text-fields{
+  background-color: white;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
